@@ -22,15 +22,20 @@ import java.util.Map;
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
-import static uk.gov.hmcts.reform.civil.callback.CaseEvent.GENERATE_DJ_FORM;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.*;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 
 @Service
 @RequiredArgsConstructor
 public class GenerateDJFormHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(GENERATE_DJ_FORM);
+    private static final List<CaseEvent> EVENTS = List.of(
+        GENERATE_DJ_FORM,
+        GENERATE_DJ_FORM_SPEC
+    );
     private static final String TASK_ID = "GenerateDJForm";
+    private static final String TASK_ID_SPEC = "GenerateDJFormSpec";
+
     private final DefaultJudgmentFormGenerator defaultJudgmentFormGenerator;
     private final ObjectMapper objectMapper;
 
@@ -46,7 +51,7 @@ public class GenerateDJFormHandler extends CallbackHandler {
 
     @Override
     public String camundaActivityId(CallbackParams callbackParams) {
-        return TASK_ID;
+        return isSpecHandler(callbackParams) ? TASK_ID_SPEC : TASK_ID;
     }
 
     private CallbackResponse generateClaimForm(CallbackParams callbackParams) {
@@ -66,7 +71,8 @@ public class GenerateDJFormHandler extends CallbackHandler {
     private void buildDocument(CallbackParams callbackParams, CaseData.CaseDataBuilder caseDataBuilder) {
         List<CaseDocument> caseDocuments = defaultJudgmentFormGenerator.generate(
             callbackParams.getCaseData(),
-            callbackParams.getParams().get(BEARER_TOKEN).toString()
+            callbackParams.getParams().get(BEARER_TOKEN).toString(),
+            callbackParams.getRequest().getEventId()
         );
         List<Element<CaseDocument>> systemGeneratedCaseDocuments = new ArrayList<>();
         systemGeneratedCaseDocuments.add(element(caseDocuments.get(0)));
@@ -74,5 +80,10 @@ public class GenerateDJFormHandler extends CallbackHandler {
             systemGeneratedCaseDocuments.add(element(caseDocuments.get(1)));
         }
         caseDataBuilder.defaultJudgmentDocuments(systemGeneratedCaseDocuments);
+    }
+
+    private boolean isSpecHandler(CallbackParams callbackParams) {
+        return callbackParams.getRequest().getEventId()
+            .equals(GENERATE_DJ_FORM_SPEC.name());
     }
 }
